# hug-llm-api

./: LICENSE  README.md
api/: .gitignore  README.RU.md  ctransformers_saiga_mistral_7b.py  local_kandinsky_2_2.py  local_saiga2_llamacpp_cpu_demo.py  local_saiga_mistral_7b.py  local_saiga_mistral_7b_gguf_fastapi.py  local_saiga_mistral_7b_gguf_interact.py  local_st_diff.py  modal_kandinsky_2.2.py  modal_kandinsky_2_2.py  modal_llm_saiga_simple.py  modal_mbart_rus_sum_gazeta.py  modal_saiga_mistral_7b_llamacpp.py  modal_saiga_mistral_api.py  modal_st_diff_simple.py  modal_st_diff_xl.py  requirements.txt  saiga_rag_habr.py  utils.py  utils_saiga_mistral_gguf.py
api/frontend/: index.html
api/summarizer_frontend/: index.html
api/summarizer_frontend_ui/: index.html
backed_by_modal/: local_st_diff.py
huggingface-test/: README.md  main.py  pyproject.toml  token.env
talk-with-pdf/: .gitignore  README.md  app.py  htmlTemplates.py  pyproject.toml
